// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`advisorCommentary PDF render > renders body only 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "padding": 16,
    }
  }
>
  <TEXT
    style={
      {
        "color": "#1a1a1d",
        "fontFamily": "Inter",
        "fontSize": 10,
        "lineHeight": 1.5,
      }
    }
  >
    Quick note for the client.
  </TEXT>
</VIEW>
`;

exports[`advisorCommentary PDF render > renders headline + body + notes 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "padding": 16,
    }
  }
>
  <TEXT
    style={
      {
        "color": "#1a1a1d",
        "fontFamily": "Fraunces",
        "fontSize": 14,
        "marginBottom": 6,
      }
    }
  >
    Strong foundation, watch concentration
  </TEXT>
  <TEXT
    style={
      {
        "color": "#1a1a1d",
        "fontFamily": "Inter",
        "fontSize": 10,
        "lineHeight": 1.5,
      }
    }
  >
    Your liquid net worth comfortably covers near-term obligations.

We recommend rebalancing the taxable account to reduce single-stock concentration.
  </TEXT>
  <TEXT
    style={
      {
        "color": "#8a8a90",
        "fontFamily": "Inter",
        "fontSize": 9,
        "lineHeight": 1.4,
        "marginTop": 8,
      }
    }
  >
    Reviewed 2026-05-06.
  </TEXT>
</VIEW>
`;

exports[`aiAnalysis PDF render > renders paragraphs and bullet list 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "padding": 16,
    }
  }
>
  <TEXT
    style={
      {
        "color": "#1a1a1d",
        "fontFamily": "Fraunces",
        "fontSize": 14,
        "marginBottom": 8,
      }
    }
  >
    Cashflow analysis
  </TEXT>
  <TEXT
    style={
      [
        {
          "color": "#1a1a1d",
          "fontFamily": "Inter",
          "fontSize": 10,
          "lineHeight": 1.5,
        },
        {
          "marginBottom": 6,
        },
      ]
    }
  >
    Income comfortably exceeds expenses through 2030.
  </TEXT>
  <TEXT
    style={
      [
        {
          "color": "#1a1a1d",
          "fontFamily": "Inter",
          "fontSize": 10,
          "lineHeight": 1.5,
        },
        {
          "marginBottom": 6,
        },
      ]
    }
  >
    Key risks:
- Concentration in employer stock
- Health-care inflation
  </TEXT>
  <TEXT
    style={
      {
        "color": "#8a8a90",
        "fontFamily": "Inter",
        "fontSize": 9,
        "lineHeight": 1.4,
        "marginTop": 8,
      }
    }
  >
    Generated 2026-05-06 with concise tone.
  </TEXT>
</VIEW>
`;

exports[`balanceSheetTable PDF render > renders empty state when data missing 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "overflow": "hidden",
    }
  }
>
  <VIEW
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 12,
        "paddingTop": 10,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontFamily": "Fraunces",
          "fontSize": 14,
        }
      }
    >
      Balance sheet
    </TEXT>
    <TEXT
      style={
        {
          "color": "#8a8a90",
          "fontSize": 9,
          "marginTop": 2,
        }
      }
    >
      No data available.
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`balanceSheetTable PDF render > renders negative net-worth in crit color 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "overflow": "hidden",
    }
  }
>
  <VIEW
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 12,
        "paddingTop": 10,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontFamily": "Fraunces",
          "fontSize": 14,
        }
      }
    >
      Balance sheet
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#1f1d1a",
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#f5efe1",
          "flex": 1,
          "fontFamily": "JetBrains Mono",
          "fontSize": 9,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        }
      }
    >
      Category
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Value
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Cash
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $50,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Taxable
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $250,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Retirement
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $700,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      Total assets
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      $100,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Total liabilities
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $200,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#b87f1f",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingVertical": 7,
      }
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
          {
            "color": "#a13a3a",
          },
        ]
      }
    >
      -$100,000
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`balanceSheetTable PDF render > renders populated 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "overflow": "hidden",
    }
  }
>
  <VIEW
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 12,
        "paddingTop": 10,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontFamily": "Fraunces",
          "fontSize": 14,
        }
      }
    >
      Balance sheet
    </TEXT>
    <TEXT
      style={
        {
          "color": "#8a8a90",
          "fontSize": 9,
          "marginTop": 2,
        }
      }
    >
      As of Jan 1, 2026
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#1f1d1a",
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingVertical": 6,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#f5efe1",
          "flex": 1,
          "fontFamily": "JetBrains Mono",
          "fontSize": 9,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        }
      }
    >
      Category
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Value
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Cash
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $50,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Taxable
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $250,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Retirement
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $700,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      Total assets
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      $1,000,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {},
        ]
      }
    >
      Total liabilities
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {},
        ]
      }
    >
      $200,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#b87f1f",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingVertical": 7,
      }
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
          {
            "color": "#2f6b4a",
          },
        ]
      }
    >
      $800,000
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`cashflowTable PDF render > renders with totals 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "overflow": "hidden",
    }
  }
>
  <VIEW
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontFamily": "Fraunces",
          "fontSize": 14,
        }
      }
    >
      Cashflow detail
    </TEXT>
    <TEXT
      style={
        {
          "color": "#8a8a90",
          "fontSize": 9,
          "marginTop": 2,
        }
      }
    >
      2026–2027
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#1f1d1a",
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Year
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Income
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Expenses
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Savings
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Net
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      2026
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $200,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $120,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $50,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "color": "#2f6b4a",
          },
        ]
      }
    >
      $30,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      2027
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $180,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $200,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $0
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "color": "#a13a3a",
          },
        ]
      }
    >
      -$20,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#b87f1f",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "left",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      Total
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      $380,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      $320,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      $50,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "fontWeight": 500,
          },
        ]
      }
    >
      —
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`cashflowTable PDF render > renders without totals 1`] = `
<VIEW
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#d8d2c4",
      "borderRadius": 6,
      "borderWidth": 1,
      "overflow": "hidden",
    }
  }
>
  <VIEW
    style={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontFamily": "Fraunces",
          "fontSize": 14,
        }
      }
    >
      Cashflow detail
    </TEXT>
  </VIEW>
  <VIEW
    style={
      {
        "backgroundColor": "#1f1d1a",
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Year
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Income
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Expenses
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Savings
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#f5efe1",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 8,
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Net
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      2026
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $200,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $120,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $50,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "color": "#2f6b4a",
          },
        ]
      }
    >
      $30,000
    </TEXT>
  </VIEW>
  <VIEW
    style={
      [
        {
          "borderTopColor": "#d8d2c4",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#fbf8f0",
        },
      ]
    }
  >
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      2027
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $180,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $200,000
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      $0
    </TEXT>
    <TEXT
      style={
        [
          {
            "color": "#1a1a1d",
            "flex": 1,
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
          },
          {
            "textAlign": "right",
          },
          {
            "color": "#a13a3a",
          },
        ]
      }
    >
      -$20,000
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`kpiTile PDF render > renders crit accent variant with negative delta 1`] = `
<VIEW
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#d8d2c4",
        "borderBottomWidth": 1,
        "borderLeftColor": "#d8d2c4",
        "borderLeftWidth": 1,
        "borderRadius": 6,
        "borderRightColor": "#d8d2c4",
        "borderRightWidth": 1,
        "borderTopWidth": 2,
      },
      {
        "borderTopColor": "#a13a3a",
      },
    ]
  }
>
  <VIEW
    style={
      {
        "padding": 14,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontFamily": "JetBrains Mono",
          "fontSize": 8,
          "letterSpacing": 1,
          "marginBottom": 6,
          "textTransform": "uppercase",
        }
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontSize": 24,
          "fontWeight": 500,
        }
      }
    >
      $800,000
    </TEXT>
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Net worth (today)
    </TEXT>
    <TEXT
      style={
        [
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
            "marginTop": 8,
          },
          {
            "color": "#a13a3a",
          },
        ]
      }
    >
      -$100,000
       vs last year
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`kpiTile PDF render > renders default accent + delta 1`] = `
<VIEW
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#d8d2c4",
        "borderBottomWidth": 1,
        "borderLeftColor": "#d8d2c4",
        "borderLeftWidth": 1,
        "borderRadius": 6,
        "borderRightColor": "#d8d2c4",
        "borderRightWidth": 1,
        "borderTopWidth": 2,
      },
      {
        "borderTopColor": "#b87f1f",
      },
    ]
  }
>
  <VIEW
    style={
      {
        "padding": 14,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontFamily": "JetBrains Mono",
          "fontSize": 8,
          "letterSpacing": 1,
          "marginBottom": 6,
          "textTransform": "uppercase",
        }
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontSize": 24,
          "fontWeight": 500,
        }
      }
    >
      $1,250,000
    </TEXT>
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Net worth (today)
    </TEXT>
    <TEXT
      style={
        {
          "color": "#8a8a90",
          "fontSize": 9,
          "marginTop": 2,
        }
      }
    >
      Up vs prior year
    </TEXT>
    <TEXT
      style={
        [
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 9,
            "marginTop": 8,
          },
          {
            "color": "#2f6b4a",
          },
        ]
      }
    >
      +
      $150,000
       vs last year
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`kpiTile PDF render > renders good accent variant 1`] = `
<VIEW
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#d8d2c4",
        "borderBottomWidth": 1,
        "borderLeftColor": "#d8d2c4",
        "borderLeftWidth": 1,
        "borderRadius": 6,
        "borderRightColor": "#d8d2c4",
        "borderRightWidth": 1,
        "borderTopWidth": 2,
      },
      {
        "borderTopColor": "#2f6b4a",
      },
    ]
  }
>
  <VIEW
    style={
      {
        "padding": 14,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontFamily": "JetBrains Mono",
          "fontSize": 8,
          "letterSpacing": 1,
          "marginBottom": 6,
          "textTransform": "uppercase",
        }
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontSize": 24,
          "fontWeight": 500,
        }
      }
    >
      $1,250,000
    </TEXT>
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Net worth (today)
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`kpiTile PDF render > renders steel accent with title override 1`] = `
<VIEW
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#d8d2c4",
        "borderBottomWidth": 1,
        "borderLeftColor": "#d8d2c4",
        "borderLeftWidth": 1,
        "borderRadius": 6,
        "borderRightColor": "#d8d2c4",
        "borderRightWidth": 1,
        "borderTopWidth": 2,
      },
      {
        "borderTopColor": "#3b6ea3",
      },
    ]
  }
>
  <VIEW
    style={
      {
        "padding": 14,
      }
    }
  >
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontFamily": "JetBrains Mono",
          "fontSize": 8,
          "letterSpacing": 1,
          "marginBottom": 6,
          "textTransform": "uppercase",
        }
      }
    >
      Net worth
    </TEXT>
    <TEXT
      style={
        {
          "color": "#1a1a1d",
          "fontSize": 24,
          "fontWeight": 500,
        }
      }
    >
      $2,000,000
    </TEXT>
    <TEXT
      style={
        {
          "color": "#5a5a60",
          "fontSize": 10,
          "marginTop": 4,
        }
      }
    >
      Estate value
    </TEXT>
  </VIEW>
</VIEW>
`;
